# detwinner

./: .clang-format  .gitignore  README.md  configure.sh  meson.build
data/: com.neatdecisions.Detwinner.appdata.xml.in  com.neatdecisions.Detwinner.desktop.in  detwinner.1  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  detwinner.pot  en.po  fi.po  fr.po  it.po  meson.build  nl.po  pl.po  ru.po  sv.po  uk.po
resources/: meson.build  resources.xml
resources/ui/: appMenu.ui  duplicateTreeViewMenu.ui  regexHelperMenu.ui  settingsDialog.ui  toolbarResultsPane.glade  toolbarSearchPane.glade
src/detwinner/: Detwinner.cpp  DetwinnerApp.cpp  DetwinnerApp.hpp  meson.build
src/detwinner-lib/: meson.build
src/detwinner-lib/logic/: CommonDataTypes.hpp  DuplicateFilesFinder.cpp  DuplicateFilesFinder.hpp  DuplicateImageFinder.cpp  DuplicateImageFinder.hpp  FileIndexer.cpp  FileIndexer.hpp  FileSearchSettings.hpp  Initializer.cpp  Initializer.hpp  MurmurHash.cpp  MurmurHash.hpp
src/detwinner-lib/logic/callbacks/: IImageFinderCallback.hpp  IIndexedFileReceiver.hpp  ISearchProcessCallback.hpp  ImageFinderCallback.cpp  ImageFinderCallback.hpp
src/detwinner-lib/logic/images/: DuplicateImageResult.cpp  DuplicateImageResult.hpp  HistogramT.hpp  ImageFeatures.cpp  ImageFeatures.hpp  ImageFeaturesBridge.cpp  ImageFeaturesBridge.hpp  ImageFeaturesBuilder.cpp  ImageFeaturesBuilder.hpp  ImageGroup.cpp  ImageGroup.hpp  ImageInfo.hpp  SimilarImageFinder.cpp  SimilarImageFinder.hpp  SimilarityCache.cpp  SimilarityCache.hpp  SimilarityCacheBuilder.cpp  SimilarityCacheBuilder.hpp  Types.hpp
src/detwinner-lib/logic/tools/: StopTimer.cpp  StopTimer.hpp
src/detwinner/callbacks/: ControlCallback.cpp  ControlCallback.hpp  IDeferredAction.hpp  IDuplicateReceiver.hpp  SearchProgressCallback.cpp  SearchProgressCallback.hpp
src/detwinner/settings/: SearchSettings.hpp  SearchSettingsManager.cpp  SearchSettingsManager.hpp
src/detwinner/tools/: AbstractFileDeleter.hpp  BackupFileDeleter.cpp  BackupFileDeleter.hpp  IconManager.cpp  IconManager.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp  PermanentFileDeleter.cpp  PermanentFileDeleter.hpp  TrashFileDeleter.cpp  TrashFileDeleter.hpp
src/detwinner/ui/: AutosizedImage.cpp  AutosizedImage.hpp  DeferredActionProgressDialog.cpp  DeferredActionProgressDialog.hpp  DetwinnerWindow.cpp  DetwinnerWindow.hpp  DuplicatesTreeView.cpp  DuplicatesTreeView.hpp  FilePreview.cpp  FilePreview.hpp  FileTreeView.cpp  FileTreeView.hpp  PlacesSidebar.cpp  PlacesSidebar.hpp  RegexListbox.cpp  RegexListbox.hpp  SearchOptionsPane.cpp  SearchOptionsPane.hpp  SearchProgressDialog.cpp  SearchProgressDialog.hpp  SearchResultsPane.cpp  SearchResultsPane.hpp  SearchSettingsDialog.cpp  SearchSettingsDialog.hpp
src/misc/compat/: optional.hpp
test/: meson.build
test/detwinner/: meson.build  test.cpp
test/detwinner-lib/: meson.build  test.cpp
test/detwinner-lib/data/files/: file1.txt
test/detwinner-lib/logic/: DuplicateFilesFinderTest.cpp  DuplicateImageFinderTest.cpp  FileIndexerTest.cpp  MurmurHashTest.cpp  TestingHelpers.cpp  TestingHelpers.hpp
test/detwinner-lib/logic/callbacks/: ImageFinderCallbackTest.cpp
test/detwinner-lib/logic/images/: HistogramTTest.cpp  ImageFeaturesBuilderTest.cpp  ImageFeaturesTest.cpp  ImageFeaturesTestFactory.cpp  ImageFeaturesTestFactory.hpp  SimilarImageFinderTest.cpp  SimilarityCacheBuilderTest.cpp
test/detwinner-lib/logic/mocks/: MockImageFinderCallback.hpp  MockSearchProcessCallback.hpp
test/detwinner/data/settings/: corrupted.ini  settings.ini
test/detwinner/settings/: SearchSettingsManagerTest.cpp
test/detwinner/tools/: MemoryMappedFileTest.cpp
test/logic/: DuplicateFilesFinderTest.cpp  FileIndexerTest.cpp
test/logic/callbacks/: ImageFinderCallbackTest.cpp
test/logic/images/: ImageFeaturesBuilderTest.cpp  ImageFeaturesTest.cpp  SimilarImageFinderTest.cpp
test/logic/mocks/: MockImageFinderCallback.hpp  MockSearchProcessCallback.hpp
